--- a/local_rmd_nbooks/m2_strain_decon_all.Rmd
+++ b/local_rmd_nbooks/m2_strain_decon_all.Rmd
@@ -138,7 +138,11 @@ stg_refnd_lvls = c("Early ring", "Late ring", "Early trophozoite", "Late trophoz
 sample_set = 'Mali2'
 algn_nm = 'minmap'
 
+soup_dir = "soupc"
 sv_dir = "pbulk_gtypes_preQC"
+
+# soup_dir = "soupc_GE_postQC"
+# sv_dir = "pbulk_gtypes_GE_postQC"
 
 strain_levels_univrs <- c(paste0("SC", 1:20), "Doublet", "Negative")
 ```
@@ -156,11 +160,12 @@ knitr::opts_knit$set(root.dir = '/Users/jr35/Google Drive/My Drive/PHD_documents
 
 ##Sample ID
 # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66") %>% sort()
-sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC38", "MSC40", "MSC50_MACS", "MSC53", "MSC57") #%>% sort()
+## All sample ids removing "MSC38" which seems to have lots of doublets
+sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC40", "MSC50_MACS", "MSC53", "MSC57", "MSC24", "MSC37", "MSC39", "MSC45", "MSC50_SLO", "MSC54", "MSC67", "MSC68", "MSC70")
 
 # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60") %>% sort()
 algn_nms = c('minmap', 'hsat', 'lr_ref')
-
+# algn_nms = c('minmap', 'hsat')
 
 sample_name_nms_al <- rep(sample_name_nms, length(algn_nms))
 algn_nms_al <- rep(algn_nms, each= length(sample_name_nms))
@@ -169,7 +174,12 @@ sm_aln_nms_al <- paste(rep(sample_name_nms, length(algn_nms)), rep(algn_nms, eac
 
 ## number of optimum clusters to investigate per sample
 # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11))
-opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC38" = c(2:6), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6))
+# opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC38" = c(2:6), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6))
+
+# opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6), "MSC24" = c(2:6), "MSC37" = c(5:9), "MSC39" = c(3:7), "MSC45" = c(2:6), "MSC50_SLO" = c(2:6), "MSC54" = c(2:6), "MSC67" = c(2:6), "MSC68" = c(2:6), "MSC70" = c(2:6))
+opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(1:3), "MSC57" = c(1:3), "MSC24" = c(1:3), "MSC37" = c(5:9), "MSC39" = c(3:7), "MSC45" = c(1:3), "MSC50_SLO" = c(2:6), "MSC54" = c(1:3), "MSC67" = c(1:3), "MSC68" = c(2:6), "MSC70" = c(1:3))
+
+
 # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9))
 # opt_clusters_nms <- list("MSC33" = c(3:9),"MSC48" = c(2:3),"MSC49" = c(2:6),"MSC55" = c(4:10),"MSC60" = c(2:7), "MSC66")
 
@@ -206,7 +216,7 @@ iter = opt_clusters_len
 ```
 
 
-```{r, eval=T}
+```{r, eval=F}
 ##Copy souporcell files for the optimum clusters
 
 for (i in 1:length(sample_name)) {
@@ -214,13 +224,13 @@ for (i in 1:length(sample_name)) {
   
   ## Create new directories
   system(
-    paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/', sample_name[i],'/soupc/', algn_nms[a],'/k', opt_clusters[i])
+    paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/', sample_name[i],'/', soup_dir, '/', algn_nms[a],'/k', opt_clusters[i])
   )
   
   ##Transfers
   ##souporcell genotyping files
   system(
-    paste0('rsync -av --include="clusters.tsv" --exclude="*" jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/', sample_name[i], '/soupc/', algn_nms[a],'/k' , opt_clusters[i],'/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/', sample_name[i],'/soupc/', algn_nms[a],'/k', opt_clusters[i])
+    paste0('rsync -av --include="clusters.tsv" --exclude="*" jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/', sample_name[i], '/', soup_dir, '/', algn_nms[a],'/k' , opt_clusters[i],'/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/', sample_name[i],'/', soup_dir, '/', algn_nms[a],'/k', opt_clusters[i])
     
     # paste0('rsync -av --include="cluster_genotypes.vcf" --include="clusters.tsv" --exclude="*" jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/souporcell_outputs/Pf/', source_irods[i], '/k' , opt_clusters[i],'/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/', sample_name[i],'/Pf/soupc/', algn_nms[a],'/k', opt_clusters[i])
     )
@@ -235,16 +245,16 @@ for (i in 1:length(sample_name)) {
 
 
 ## Log likelihood Elbow plots visualisations for all MSCs
-```{r, message=FALSE, eval=T}
+```{r, message=FALSE, eval=F}
 ## copy from farm
-map2(sample_name_nms_al, rep(algn_nms, each= length(sample_name_nms)), ~system(paste0('rsync -av jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/', .x, '/soupc/',.y,'/clusters_log_likelihoods.txt /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/', .x,'/soupc/',.y,'/')))
+map2(sample_name_nms_al, rep(algn_nms, each= length(sample_name_nms)), ~system(paste0('rsync -av jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/', .x, '/', soup_dir, '/',.y,'/clusters_log_likelihoods.txt /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/', .x,'/', soup_dir, '/',.y,'/')))
 
 ```
 
 
 ```{r, message=FALSE}
 ## Read in log likelihoods for estimation of number of clusters from elbow plots
-clusters_log_likelihoods_lst = map2(sample_name_nms_al, rep(algn_nms, each= length(sample_name_nms)), ~read_table(paste0('data/processed/Pf/', .x,'/soupc/',.y,'/clusters_log_likelihoods.txt'), col_names = c('No_of_clusters', 'td1','td2','td3', 'td4','log_likelihood')) %>% select(-(starts_with("td"))) %>% mutate(across(No_of_clusters, ~str_remove_all(., ".*out_dir_k|/clusters.err:best")))) %>% set_names(paste(sample_name_nms_al, rep(algn_nms, each= length(sample_name_nms)), sep ='_'))
+clusters_log_likelihoods_lst = map2(sample_name_nms_al, rep(algn_nms, each= length(sample_name_nms)), ~read_table(paste0('data/processed/Pf/', .x,'/', soup_dir, '/',.y,'/clusters_log_likelihoods.txt'), col_names = c('No_of_clusters', 'td1','td2','td3', 'td4','log_likelihood')) %>% select(-(starts_with("td"))) %>% mutate(across(No_of_clusters, ~str_remove_all(., ".*out_dir_k|/clusters.err:best")))) %>% set_names(paste(sample_name_nms_al, rep(algn_nms, each= length(sample_name_nms)), sep ='_'))
 ```
 
 
@@ -450,7 +460,7 @@ mnmp_lr_ref_comp = map(soupo_kselect_al_cor, ~pivot_wider(.x, names_from = align
 
 
 pheatmap
-```{r , fig.width = 10, fig.height = 5}
+```{r , fig.width = 10, fig.height = 5, warning=FALSE}
 ## Heatmap function for plotting pheatmap for number of cells assigned labels from Clara's and Roser's datasets
 phmap_lab_transfr <- function(dset_lab, col_labs, row_labs, row_labs_c, col_labs_c, strn_order, ttl){
   anno_row = dset_lab %>% dplyr::count({{ col_labs }}, {{ row_labs }}) %>% 
@@ -481,23 +491,26 @@ phmap_lab_transfr <- function(dset_lab, col_labs, row_labs, row_labs_c, col_labs
 
 
 # tst=phmap_lab_transfr(soupc_vs_vireo, col_labs= `Souporcell`, row_labs=`Vireo`, row_labs_c ='Vireo', col_labs_c= 'Souporcell', strn_order=strain_levels[[3]])
-imap(hsat_mnmp_comp, ~phmap_lab_transfr(.x, col_labs= `minmap`, row_labs=`hsat`, row_labs_c ='minmap', col_labs_c= 'hsat', ttl = .y))
+# imap(hsat_mnmp_comp, ~phmap_lab_transfr(.x, col_labs= `minmap`, row_labs=`hsat`, row_labs_c ='minmap', col_labs_c= 'hsat', ttl = .y))
+imap(hsat_mnmp_comp, possibly(~phmap_lab_transfr(.x, col_labs= `minmap`, row_labs=`hsat`, row_labs_c ='minmap', col_labs_c= 'hsat', ttl = .y)), 'k=1 so no groups to compare which is necessary for the heatmap')
+
+# imap(.,possibly(~chrom_paintr_smth_gradient(gtypes_comps_tbl =.x, ttl=.y, lg = "none"), 'No overlapping SNPs between the 2 groups'))
+```
+
+
+```{r , fig.width = 10, fig.height = 5}
+## Heatmap function for plotting pheatmap for number of cells assigned labels
+imap(hsat_lr_ref_comp, possibly(~phmap_lab_transfr(.x, col_labs= `lr_ref`, row_labs=`hsat`, row_labs_c ='lr_ref', col_labs_c= 'hsat', ttl = .y)), 'k=1 so no groups to compare which is necessary for the heatmap')
 
 ```
 
 
 ```{r , fig.width = 10, fig.height = 5}
 ## Heatmap function for plotting pheatmap for number of cells assigned labels from Clara's and Roser's datasets
-imap(hsat_lr_ref_comp, ~phmap_lab_transfr(.x, col_labs= `lr_ref`, row_labs=`hsat`, row_labs_c ='lr_ref', col_labs_c= 'hsat', ttl = .y))
+imap(mnmp_lr_ref_comp, possibly(~phmap_lab_transfr(.x, col_labs= `lr_ref`, row_labs=`minmap`, row_labs_c ='lr_ref', col_labs_c= 'minmap', ttl = .y)), 'k=1 so no groups to compare which is necessary for the heatmap')
 
 ```
 
-
-```{r , fig.width = 10, fig.height = 5}
-## Heatmap function for plotting pheatmap for number of cells assigned labels from Clara's and Roser's datasets
-imap(mnmp_lr_ref_comp, ~phmap_lab_transfr(.x, col_labs= `lr_ref`, row_labs=`minmap`, row_labs_c ='lr_ref', col_labs_c= 'minmap', ttl = .y))
-
-```
 
 ComplexHeatmap
 ```{r }
@@ -741,7 +754,7 @@ strain_harmonize_fn <- function(strn_tbl = tbl1, strn1 = "Strain_2nd", strn2 = "
 
 ```{r, fig.width=4, fig.height=4}
 
-snk_pt_fn <- function(decod_tbl, strns_2_plt = c('Strain_2nd', 'n_strains'), labls = paste0("K=", opt_clusters_nms[[3]][1:2]), bp_face = c("bold", "plain")){
+snk_pt_fn <- function(decod_tbl, strns_2_plt = c('Strain_2nd', 'n_strains'), labls = paste0("K=", opt_clusters_nms[[3]][1:2]), bp_face = c("bold", "plain"), ttl = "plot"){
   decod_tbl %>% 
         mutate(across(contains("train"), ~str_replace_all(., c("Doublet" = "Dbt", "Negative" = "Neg")))) %>%
         make_long(all_of(strns_2_plt)) %>% 
@@ -752,6 +765,7 @@ snk_pt_fn <- function(decod_tbl, strns_2_plt = c('Strain_2nd', 'n_strains'), lab
         scale_fill_manual(values = strain_cols_n)+
         scale_x_discrete(labels=labls)+
         geom_sankey_label(size = 3.6, color = 1, fill = "white") +
+        labs(title = ttl) +
         theme_sankey(base_size = 9) +
         theme(legend.position = "none",
               axis.title.x = element_blank(),
@@ -781,7 +795,7 @@ strn_harmnzd_tbls <- list(soupo_seu_kmerge, don_k_names_aln, don_hmonizd_k_names
 list(strn_harmnzd_tbls, don_k_names_aln, opt_clusters_nms_aln, don_hmonizd_k_names_aln) %>%
   pmap(~{  
     
-snk_pt_fn(..1, strns_2_plt = c(..2[1], ..4[2], ..4[3]), labls = paste0("K=", ..3[1:3]), bp_face = c("bold", "plain", "plain"))
+snk_pt_fn(..1, strns_2_plt = c(..2[1], ..4[2:3]), labls = paste0("K=", ..3[1:3]), bp_face = c("bold", "plain", "plain"))
     
  })
 
@@ -814,6 +828,8 @@ snk_pt_fn(..1, strns_2_plt = c(..2[1], ..4[2], ..4[3], ..4[4], ..4[5]), labls = 
 ```
 
 
+
+
 ```{r}
 snk_plts[str_detect(names(snk_plts), "minmap")]
 ```
@@ -828,9 +844,93 @@ snk_plts[str_detect(names(snk_plts), "lr_ref")]
 ```
 
 
+```{r, fig.width=6, fig.height=4}
+
+strn_hm_tbl_fn <- function(soupo_seu_kmerge_f, don_k_names_aln_f, don_hmonizd_k_names_aln_f){
+  list(soupo_seu_kmerge_f, don_k_names_aln_f, don_hmonizd_k_names_aln_f) %>%
+    pmap(~{
+      
+      if (length(..2) == 3) { 
+          
+            strain_harmonize_fn(strn_tbl = ..1, strn1 = ..2[1], strn2 = ..2[2], out_strn = ..3[2]) %>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[2], strn2 = ..2[3], out_strn = ..3[3])
+         
+          } else if (length(..2) == 4) {
+          
+            strain_harmonize_fn(strn_tbl = ..1, strn1 = ..2[1], strn2 = ..2[2], out_strn = ..3[2]) %>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[2], strn2 = ..2[3], out_strn = ..3[3])%>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[3], strn2 = ..2[4], out_strn = ..3[4])
+       
+          } else if  (length(..2) == 5) {
+          
+            strain_harmonize_fn(strn_tbl = ..1, strn1 = ..2[1], strn2 = ..2[2], out_strn = ..3[2]) %>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[2], strn2 = ..2[3], out_strn = ..3[3])%>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[3], strn2 = ..2[4], out_strn = ..3[4])%>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[4], strn2 = ..2[5], out_strn = ..3[5])
+         
+          } else {
+          print("Not accounted for")
+      }
+    })
+}
+
+
+```
+
+
+```{r, fig.width=6, fig.height=4}
+
+strn_hm_tbl_fn <- function(soupo_seu_kmerge_f, don_k_names_aln_f, don_hmonizd_k_names_aln_f){
+  list(soupo_seu_kmerge_f, don_k_names_aln_f, don_hmonizd_k_names_aln_f) %>%
+    pmap(~{
+      
+      if (length(..2) == 3) { 
+          
+            strain_harmonize_fn(strn_tbl = ..1, strn1 = ..2[1], strn2 = ..2[2], out_strn = ..3[2]) %>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[2], strn2 = ..2[3], out_strn = ..3[3])
+         
+          } else if (length(..2) == 4) {
+          
+            strain_harmonize_fn(strn_tbl = ..1, strn1 = ..2[1], strn2 = ..2[2], out_strn = ..3[2]) %>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[2], strn2 = ..2[3], out_strn = ..3[3])%>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[3], strn2 = ..2[4], out_strn = ..3[4])
+       
+          } else if  (length(..2) == 5) {
+          
+            strain_harmonize_fn(strn_tbl = ..1, strn1 = ..2[1], strn2 = ..2[2], out_strn = ..3[2]) %>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[2], strn2 = ..2[3], out_strn = ..3[3])%>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[3], strn2 = ..2[4], out_strn = ..3[4])%>%
+            strain_harmonize_fn(strn_tbl = ., strn1 = ..3[4], strn2 = ..2[5], out_strn = ..3[5])
+         
+          } else {
+          print("Not accounted for")
+      }
+    })
+}
+
+
+```
+
+```{r, fig.width=6, fig.height=4}
+
+strn_harmnzd_tbls <- strn_hm_tbl_fn(soupo_seu_kmerge_f = soupo_seu_kmerge, don_k_names_aln_f =don_k_names_aln, don_hmonizd_k_names_aln_f = don_hmonizd_k_names_aln)
+```
+
+
+
 ```{r}
-optimum_k = c(8,6,6,7,7,9,3,8,3,3,3) %>% set_names(sample_name_nms)
-optimum_k_aln = rep(c(8,6,6,7,7,9,3,8,3,3,3),length(algn_nms)) %>% set_names(sm_aln_nms_al)
+# optimum_k = c(8,6,6,7,7,9,3,8,3,3,3) %>% set_names(sample_name_nms)
+# optimum_k_aln = rep(c(8,6,6,7,7,9,3,8,3,3,3),length(algn_nms)) %>% set_names(sm_aln_nms_al)
+
+optimum_k = c("MSC33" =8, "MSC48" =5, "MSC49" =6, "MSC55" =7, "MSC60" =8, "MSC66" =9, "MSC40" =9, "MSC50_MACS" =2, "MSC53" =1, "MSC57" =1, "MSC24" =1, "MSC37" =5, "MSC37" =4, "MSC45" =1, "MSC50_SLO" =2, "MSC54" =1, "MSC67" =1, "MSC68" =3, "MSC70" =1)
+
+## having k=2 for samples with k=1 to verify no additional strains
+# optimum_k = c("MSC33" =8, "MSC48" =5, "MSC49" =6, "MSC55" =7, "MSC60" =8, "MSC66" =9, "MSC40" =9, "MSC50_MACS" =2, "MSC53" =2, "MSC57" =2, "MSC24" =2, "MSC37" =5, "MSC39" =4, "MSC45" =2, "MSC50_SLO" =2, "MSC54" =2, "MSC67" =2, "MSC68" =3, "MSC70" =2)
+
+# optimum_k_actual_aln = rep(optimum_k_actual, length(algn_nms)) %>% set_names(sm_aln_nms_al)
+
+optimum_k_aln = rep(optimum_k, length(algn_nms)) %>% set_names(sm_aln_nms_al)
+
 # optimum_k = c(8,6, 4,5,5) %>% set_names(sample_name_nms)
 # optimum_k = c(8,6,6,7,7) %>% set_names(sample_name_nms)
 # optimum_k_aln = rep(c(8,6,6,7,7),length(algn_nms)) %>% set_names(sm_aln_nms_al)
@@ -929,111 +1029,6 @@ soupo_seu_kmerge[[3]] %>%
 ```
 
 
-```{r, fig.width=6, fig.height=4, eval=FALSE}
-## !!NOTE - For trouble shooting - dont delete
-# st_assgn_sanky1_14 <- list(soupo_seu_kmerge, names(soupo_seu_kmerge), map(opt_clusters_nms, ~.x[5])) %>%
-#     pmap(., ~{
-#       decod_tbl <- ..1 %>% 
-#         mutate("Strain_final" = !!rlang::sym(paste0("Strain_",..2,"_", ..3)),
-#                    "Strain_2nd" = !!rlang::sym(paste0("Strain_",..2,"_", ..3-1)),
-#                    "Strain_1st" = !!rlang::sym(paste0("Strain_",..2,"_", ..3-2)),
-#                    "Strain_0" = !!rlang::sym(paste0("Strain_",..2,"_", ..3-3)),
-#                    "Strain_n1" = !!rlang::sym(paste0("Strain_",..2,"_", ..3-4))) %>%
-#             select(bcode, Strain_final, Strain_2nd, Strain_1st,Strain_0, Strain_n1) %>% 
-#             group_by(Strain_n1) %>% 
-#             add_count(Strain_0, name = "stf_n") %>%
-#             mutate(across(stf_n, ~case_when(str_detect(Strain_0, "SC") & str_detect(Strain_n1, "Doublet|Negative") ~ 0,
-#                                             str_detect(Strain_n1, "SC") & str_detect(Strain_0, "Doublet|Negative") ~ 0,
-#                                             T ~ .)),
-#                    top_st = max(stf_n),
-#                    nw_st = case_when(Strain_0 == "Doublet" | Strain_0 == "Negative" ~ Strain_0,
-#                                      top_st == stf_n ~ Strain_n1)) %>%
-#         arrange(Strain_0) %>%
-#         group_by(Strain_0)%>%
-#         fill(nw_st, .direction = "downup") %>%
-#         group_by(is.na(nw_st))%>%
-#         mutate(nro_count = data.table::rleid(Strain_0)) %>%
-#         ungroup()%>%
-#         mutate(n_strains2 = case_when(is.na(nw_st) ~ paste0("SC",(n_distinct(Strain_n1)+nro_count)-2), T ~ nw_st))%>% 
-#         group_by(n_strains2) %>% 
-#         add_count(Strain_1st, name = "stf_n2") %>%
-#         mutate(across(stf_n2, ~case_when(str_detect(Strain_1st, "SC") & str_detect(n_strains2, "Doublet|Negative") ~ 0,
-#                                             str_detect(n_strains2, "SC") & str_detect(Strain_1st, "Doublet|Negative") ~ 0,
-#                                             T ~ .)),
-#                    top_st2 = max(stf_n2),
-#                    nw_st2 = case_when(Strain_1st == "Doublet" | Strain_1st == "Negative" ~ Strain_1st,
-#                                       top_st2 == stf_n2 ~ n_strains2)) %>%
-#         arrange(Strain_1st) %>%
-#         group_by(Strain_1st) %>%
-#         fill(nw_st2, .direction = "downup") %>% 
-#         ungroup() %>%
-#         group_by(is.na(nw_st2))%>%
-#         mutate(nro_count2 = data.table::rleid(Strain_1st)) %>%
-#         ungroup()%>%
-#         mutate(n_strains3 = case_when(is.na(nw_st2) ~ paste0("SC",(n_distinct(n_strains2)+nro_count2)-2), T ~ nw_st2)) %>% 
-#         #
-#         group_by(n_strains3) %>% 
-#         add_count(Strain_2nd, name = "stf_n3") %>%
-#         mutate(across(stf_n3, ~case_when(str_detect(Strain_2nd, "SC") & str_detect(n_strains3, "Doublet|Negative") ~ 0,
-#                                             str_detect(n_strains3, "SC") & str_detect(Strain_2nd, "Doublet|Negative") ~ 0,
-#                                             T ~ .)),
-#                    top_st3 = max(stf_n3),
-#                    nw_st3 = case_when(Strain_2nd == "Doublet" | Strain_2nd == "Negative" ~ Strain_2nd,
-#                                       top_st3 == stf_n3 ~ n_strains3)) %>%
-#         arrange(Strain_2nd) %>%
-#         group_by(Strain_2nd) %>%
-#         fill(nw_st3, .direction = "downup") %>% 
-#         ungroup() %>%
-#         group_by(is.na(nw_st3))%>%
-#         mutate(nro_count3 = data.table::rleid(Strain_2nd)) %>%
-#         ungroup()%>%
-#         mutate(n_strains4 = case_when(is.na(nw_st3) ~ paste0("SC",(n_distinct(n_strains3)+nro_count3)-2), T ~ nw_st3)) %>% 
-#         #
-#         group_by(n_strains4) %>% 
-#         add_count(Strain_final, name = "stf_n4") %>%
-#         mutate(across(stf_n4, ~case_when(str_detect(Strain_final, "SC") & str_detect(n_strains4, "Doublet|Negative") ~ 0,
-#                                             str_detect(n_strains4, "SC") & str_detect(Strain_final, "Doublet|Negative") ~ 0,
-#                                             T ~ .)),
-#                    top_st4 = max(stf_n4),
-#                    nw_st4 = case_when(Strain_final == "Doublet" | Strain_final == "Negative" ~ Strain_final,
-#                                       top_st4 == stf_n4 ~ n_strains4)) %>%
-#         arrange(Strain_final) %>%
-#         group_by(Strain_final) %>%
-#         fill(nw_st4, .direction = "downup") %>% 
-#         ungroup() %>%
-#         group_by(is.na(nw_st4))%>%
-#         mutate(nro_count4 = data.table::rleid(Strain_final)) %>%
-#         ungroup()%>%
-#         mutate(n_strains5 = case_when(is.na(nw_st4) ~ paste0("SC",(n_distinct(n_strains4)+nro_count4)-2), T ~ nw_st4)) %>% 
-#         #
-#         select(bcode, Strain_n1, n_strains2, n_strains3, n_strains4, n_strains5)%>% 
-#         column_to_rownames('bcode') 
-#       
-#     snk_pt <- decod_tbl  %>%
-#         mutate(across(contains("train"), ~str_replace_all(., c("Doublet" = "Dbt", "Negative" = "Neg")))) %>%
-#         make_long(Strain_n1, n_strains2, n_strains3, n_strains4, n_strains5) %>%
-#         add_count(x,node, "n") %>%
-#         ggplot(., aes(x = x, next_x = next_x,node = node,next_node = next_node,fill = factor(node),label = paste0(node,": ",n))) +
-#             geom_sankey() +
-#         theme_void()+
-#         scale_fill_manual(values = strain_cols_n)+
-#         scale_x_discrete(labels=c("Strain_n1" = paste0("K=", ..3-4), "n_strains2" = paste0("K=", ..3-3), "n_strains3" = paste0("K=", ..3-2), "n_strains4" = paste0("K=", ..3-1), "n_strains5" = paste0("K=", ..3)))+
-#         geom_sankey_label(size = 3.6, color = 1, fill = "white") +
-#         theme_sankey(base_size = 9) +
-#         theme(legend.position = "none",
-#               axis.title.x = element_blank(),
-#               axis.text.x = element_text(size = 15, face = c("plain", "bold", "plain")))
-#     
-#     return(list(decod_tbl, snk_pt))
-#         
-#       })
-# 
-# # Add a column for the counting
-# # df %>%mutate(count = cumsum(value != dplyr::lag(value, default = dplyr::first(value))))
-# map(st_assgn_sanky1_14, ~.x[[2]])
-```
-
-
 
 ```{r, message=FALSE}
 ##Coalesce the genotypes and get a consensus genotype taking labels for highest resolution K
@@ -1047,14 +1042,21 @@ Strain_qc_cutoff=0
 # optimum_k = c(8,6, 4,5,5,10) %>% set_names(sample_name_nms)
 
 # opt_narrow_clusters_nms <-  list("MSC33" = c(7:9),"MSC48" = c(3:5),"MSC49" = c(5:7),"MSC55" = c(4:6),"MSC60" = c(6:8),"MSC66" = c(7:9))
-opt_narrow_clusters_nms <-  list("MSC33" = c(7:9),"MSC48" = c(3:5),"MSC49" = c(5:7),"MSC55" = c(4:6),"MSC60" = c(6:8),"MSC66" = c(7:9), "MSC38" = c(2:4), "MSC40" = c(7:9), "MSC50_MACS" = c(2:4), "MSC53" = c(2:4), "MSC57" = c(2:4))
+# opt_narrow_clusters_nms <-  list("MSC33" = c(7:9),"MSC48" = c(3:5),"MSC49" = c(5:7),"MSC55" = c(4:6),"MSC60" = c(6:8),"MSC66" = c(7:9), "MSC38" = c(2:4), "MSC40" = c(7:9), "MSC50_MACS" = c(2:4), "MSC53" = c(2:4), "MSC57" = c(2:4))
+
+opt_narrow_clusters_nms <-  list("MSC33" = c(7:9),"MSC48" = c(3:5),"MSC49" = c(5:7),"MSC55" = c(5:7),"MSC60" = c(6:8),"MSC66" = c(7:9), "MSC40" = c(7:9), "MSC50_MACS" = c(2:4), "MSC53" = c(2), "MSC57" = c(2), "MSC24" = c(2), "MSC37" = c(5:7), "MSC39" = c(4:6), "MSC45" = c(2), "MSC50_SLO" = c(2:4), "MSC54" = c(2), "MSC67" = c(2), "MSC68" = c(2:4), "MSC70" = c(2))
+
 # opt_narrow_clusters_nms <-  list("MSC33" = c(7:9),"MSC48" = c(4:6),"MSC49" = c(3:5),"MSC55" = c(4:6),"MSC60" = c(3:5))
 opt_narrow_clusters_nms_aln <- rep(opt_narrow_clusters_nms, length(algn_nms)) %>% set_names(sm_aln_nms_al)
 # opt_narrow_clusters_nms <-  list("MSC33" = c(7:9),"MSC48" = c(4:6),"MSC49" = c(3:5),"MSC55" = c(4:6),"MSC60" = c(3:5), "MSC66" = c(8:10))
 
 
 # strn_c_mdata <- list(strn_harmnzd_tbls_5, names(strn_harmnzd_tbls_5), opt_clusters_nms[names(strn_harmnzd_tbls_5)] %>% map(.,max), optimum_k, imap(opt_narrow_clusters_nms, ~paste0(.y, '_', .x))) %>%
-strn_c_mdata <- list(strn_harmnzd_tbls_5, names(strn_harmnzd_tbls_5), opt_clusters_nms_aln[names(strn_harmnzd_tbls_5)] %>% map(.,max), optimum_k_aln, imap(opt_narrow_clusters_nms_aln, ~paste0(.y, '_', .x))) %>%
+strn_c_mdata <- list(strn_harmnzd_tbls_5, 
+                     names(strn_harmnzd_tbls_5), 
+                     opt_clusters_nms_aln[names(strn_harmnzd_tbls_5)] %>% map(.,max), 
+                     optimum_k_aln, 
+                     imap(opt_narrow_clusters_nms_aln, ~paste0(.y, '_', .x))) %>%
   pmap(~{
     ..1 %>%
       unite(col = 'Strn_c', starts_with("Strain_hmo_M"), sep='_', remove = F) %>% 
@@ -1082,7 +1084,6 @@ strn_c_mdata <- list(strn_harmnzd_tbls_5, names(strn_harmnzd_tbls_5), opt_cluste
 ```
 
 
-
 ```{r, eval=FALSE} 
 
 map2(clusters_log_likelihoods_lst[str_detect(names(clusters_log_likelihoods_lst), "hsat")] , optimum_k, ~.x %>%
@@ -1091,7 +1092,7 @@ map2(clusters_log_likelihoods_lst[str_detect(names(clusters_log_likelihoods_lst)
 ```
 
 ```{r, fig.width=16, fig.height=8} 
-optimum_k = c(8,6,6,7,7,9,3,8,3,3,3) %>% set_names(sample_name_nms)
+# optimum_k = c(8,6,6,7,7,9,3,8,3,3,3) %>% set_names(sample_name_nms)
 
 optimum_kv2 <- optimum_k-1
 optimum_kv3 <- optimum_k+1
@@ -1524,69 +1525,6 @@ map(strn_c_mdata,
 
 Write out strain_qcd/strain + stage_ag/stage_afm barcodes to farm for pseudobulk genotyping
 
-```{r, eval=F}
-## DOUBLETS WRITTEN INTO THE SAME FOLDER IN MSC_PP.rmd - SHOULD BE COMBINED INTO ONE NOTEBOOK
-# sample_ids = map2(sample_name_nms, source_irods_nms, ~paste0(.x, '_', .y))
-
-for (s in names(strn_c_mdata)) {
-  for (str_q in c('strain')){
-    ## Assign minimap/hsat mapper directory
-    algn_nm = str_remove(s, "MSC[0-9]*_")
-    s_nm = str_remove(s, "_.*")
-    
-    # ss_qcd_ano <- map(strn_c_mdata[s], ~.x %>% dplyr::select(str_q) %>% mutate(across(c(str_q), ~droplevels(factor(.)))) %>% rownames_to_column('bcode')%>% rename('str'=str_q) %>% split(f = ~ str, drop = T))
-    ss_qcd_ano <- map(strn_c_mdata[s], ~.x %>% dplyr::select(str_q, bcode) %>% mutate(across(c(str_q), ~droplevels(factor(.)))) %>% rename('str'=str_q) %>% split(f = ~ str, drop = T))
-    names(ss_qcd_ano[[1]]) <- names(ss_qcd_ano[[1]]) %>% str_replace(., '\\.', '_')
-    print(names(ss_qcd_ano[[1]]))
-    
-    system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/', algn_nm,'/',str_q,'_k',optimum_k_aln[s],'/'))
-    system(paste0('rm /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',str_q,'_k',optimum_k_aln[s],'/*'))
-
-    imap(ss_qcd_ano[[1]], ~write(.x$bcode, paste0('data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',str_q,'_k',optimum_k_aln[s],'/',.y, '.tsv')))
-     
-    
-    system(
-      paste0('rsync -av --delete --rsync-path="mkdir -p /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/ && rsync" /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',str_q,'_k',optimum_k_aln[s], ' jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/')
-    )
-    
-    ##Add doublets
-    # system(
-    #   paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/Doublet.tsv ', '/Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',str_q,'_k',optimum_k_aln[s],'/')
-    # )
-    
-    
-    for(stg_c in c('stage_afm', 'stage_ag')){
-      ss_qcd_ano <- map(strn_c_mdata[s], ~.x %>% dplyr::select(str_q, stg_c, bcode) %>% mutate(across(c(str_q, stg_c), ~droplevels(factor(.)))) %>% rename('stg'=stg_c, 'str'=str_q) %>% split(f = ~ str+stg, drop = T))
-      names(ss_qcd_ano[[1]]) <- names(ss_qcd_ano[[1]]) %>% str_replace(., '\\.', '_')
-      print(names(ss_qcd_ano[[1]]))
-      
-      system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',optimum_k_aln[s],'/'))
-      system(paste0('rm /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',optimum_k_aln[s],'/*'))
-
-      imap(ss_qcd_ano[[1]], ~write(.x$bcode, paste0('data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',optimum_k_aln[s],'/',.y, '.tsv')))
-      
-      system(
-        paste0('rsync -av --delete /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',optimum_k_aln[s], ' jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/')
-      )
-      
-       ##Add doublets
-    #   system(
-    #   paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/Doublet.tsv ', '/Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',optimum_k_aln[s],'/')
-    # )
-      
-    }
-  }
-    system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set, '/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt' ))
-    
-    strn_c_mdata[[s]] %>% filter(dbt_neg_all == "LikelySinglet") %>% pull(bcode) %>% write(., paste0('data/processed/Pf/', s_nm, '/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt/barcodes.tsv'))
-  
-    ##Add barcodes after removing of doublets concordant across ks
-    system(
-      paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt/barcodes.tsv ', 'jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt/')
-    )
-}
-```
-
 
 ```{r, eval=T}
 ## DOUBLETS WRITTEN INTO THE SAME FOLDER IN MSC_PP.rmd - SHOULD BE COMBINED INTO ONE NOTEBOOK
@@ -1594,27 +1532,29 @@ for (s in names(strn_c_mdata)) {
 
 for (s in names(strn_c_mdata)) {
   narrow_k <- opt_narrow_clusters_nms[[str_remove(s, "_.*")]]
+  ## Assign minimap/hsat mapper directory
+  algn_nm = str_remove(s, "MSC[0-9]*_")
+  s_nm = str_remove(s, "_.*")
+  
+  ## !!!NOTE - Dangerous command - activate only when barcodes are modified
+  # system(paste0('rm -r /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/*'))
   
   for (k in narrow_k) {
     for (str_q in c('strain')){
-      ## Assign minimap/hsat mapper directory
-      algn_nm = str_remove(s, "MSC[0-9]*_")
-      s_nm = str_remove(s, "_.*")
-
+      
       # ss_qcd_ano <- map(strn_c_mdata[s], ~.x %>% dplyr::select(str_q) %>% mutate(across(c(str_q), ~droplevels(factor(.)))) %>% rownames_to_column('bcode')%>% rename('str'=str_q) %>% split(f = ~ str, drop = T))
       ss_qcd_ano <- map(strn_c_mdata[s], ~.x %>% dplyr::select(str_q, bcode) %>% mutate(across(c(str_q), ~droplevels(factor(.)))) %>% rename('str'=str_q) %>% split(f = ~ str, drop = T))
       names(ss_qcd_ano[[1]]) <- names(ss_qcd_ano[[1]]) %>% str_replace(., '\\.', '_')
       print(names(ss_qcd_ano[[1]]))
 
       system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/', algn_nm,'/',str_q,'_k',k,'/'))
-      system(paste0('rm /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',str_q,'_k',k,'/*'))
 
       imap(ss_qcd_ano[[1]], ~write(.x$bcode, paste0('data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',str_q,'_k',k,'/',.y, '.tsv')))
 
 
-      system(
-        paste0('rsync -av --delete --rsync-path="mkdir -p /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/ && rsync" /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',str_q,'_k',k, ' jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/')
-      )
+      # system(
+      #   paste0('rsync -av --delete --rsync-path="mkdir -p /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/ && rsync" /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',str_q,'_k',k, ' jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/')
+      # )
 
       ##Add doublets
       # system(
@@ -1628,13 +1568,12 @@ for (s in names(strn_c_mdata)) {
         print(names(ss_qcd_ano[[1]]))
 
         system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',k,'/'))
-        system(paste0('rm /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',k,'/*'))
 
         imap(ss_qcd_ano[[1]], ~write(.x$bcode, paste0('data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',k,'/',.y, '.tsv')))
 
-        system(
-          paste0('rsync -av --delete /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',k, ' jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/')
-        )
+        # system(
+        #   paste0('rsync -av --delete /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/',stg_c,'_',str_q,'_k',k, ' jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,'/')
+        # )
 
          ##Add doublets
       #   system(
@@ -1648,10 +1587,13 @@ for (s in names(strn_c_mdata)) {
       strn_c_mdata[[s]] %>% filter(dbt_neg_all == "LikelySinglet") %>% pull(bcode) %>% write(., paste0('data/processed/Pf/', s_nm, '/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt/barcodes.tsv'))
 
       ##Add barcodes after removing of doublets concordant across ks
-      system(
-        paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt/barcodes.tsv ', 'jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt/')
-      )
+      # system(
+      #   paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt/barcodes.tsv ', 'jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm, '/bcodes_no_dbt/')
+      # )
   }
+  system(
+        paste0('rsync -av --delete --rsync-path="mkdir -p /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm,' && rsync" /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/',algn_nm, ' jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/',sample_set,'/data/processed/Pf/',s_nm,'/', sv_dir,'/bcodes/')
+      )
 }
 ```
 
@@ -1762,3 +1704,4 @@ list(strn_c_mdata)  %>%
       
 })
 ```
+m   
