don't remember the change

--- a/local_rmd_nbooks/m2_QC_pp_dblts_all.Rmd
+++ b/local_rmd_nbooks/m2_QC_pp_dblts_all.Rmd
@@ -45,6 +45,7 @@ suppressPackageStartupMessages({
   library(scmap)
   library(ggsankey)
   library(caret)
+  library(BPCells)
   conflict_prefer("select", "dplyr")
   conflict_prefer("filter", "dplyr")
   conflict_prefer("rename", "dplyr")
